Salesforce/main/default/objects/Account/fields/Altitud__c.field-meta.xml
<CustomField>
    <fullName>Altitud__c</fullName>
    <label>Altitud</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>