Salesforce/main/default/objects/Account/fields/Ativo_DMValoriza__c.field-meta.xml
<CustomField>
    <fullName>Ativo_DMValoriza__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ativo DMValoriza</description>
    <inlineHelpText>Ativo DMValoriza</inlineHelpText>
    <label>Ativo DMValoriza</label>
    <type>Checkbox</type>
</CustomField>