Salesforce/main/default/objects/Account/fields/Barrio__c.field-meta.xml
<CustomField>
    <fullName>Barrio__c</fullName>
    <label>Bairro</label>
    <type>TextArea</type>
</CustomField>