Salesforce/main/default/objects/Account/fields/Calle__c.field-meta.xml
<CustomField>
    <fullName>Calle__c</fullName>
    <label>Rua</label>
    <length>60</length>
    <type>Text</type>
</CustomField>