Salesforce/main/default/objects/Account/fields/Categoria_CFOP__c.field-meta.xml
<CustomField>
    <fullName>Categoria_CFOP__c</fullName>
    <label>Categoria CFOP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00 - Industria (cooperativa)</fullName>
            </value>
            <value>
                <fullName>01 - Electricidad</fullName>
            </value>
            <value>
                <fullName>02 - Comunicacion</fullName>
            </value>
            <value>
                <fullName>03 - Transporte</fullName>
            </value>
            <value>
                <fullName>04 - Servicios</fullName>
            </value>
            <value>
                <fullName>05 - Bienes de consumo</fullName>
            </value>
            <value>
                <fullName>06 - Cliente, no contribuyente</fullName>
            </value>
            <value>
                <fullName>07 - Cliente agricola</fullName>
            </value>
            <value>
                <fullName>08 - Empresa de distribucion</fullName>
            </value>
            <value>
                <fullName>09 - Sucursal del fabricante</fullName>
            </value>
            <value>
                <fullName>0 - Industria (cooperativa)</fullName>
                <isActive>false</isActive>
                <label>0 - Industria (cooperativa)</label>
            </value>
            <value>
                <fullName>1 - Electricidad</fullName>
                <isActive>false</isActive>
                <label>1 - Electricidad</label>
            </value>
            <value>
                <fullName>2 - Comunicacion</fullName>
                <isActive>false</isActive>
                <label>2 - Comunicacion</label>
            </value>
            <value>
                <fullName>3 - Transporte</fullName>
                <isActive>false</isActive>
                <label>3 - Transporte</label>
            </value>
            <value>
                <fullName>4 - Servicios</fullName>
                <isActive>false</isActive>
                <label>4 - Servicios</label>
            </value>
            <value>
                <fullName>5 - Bienes de consumo</fullName>
                <isActive>false</isActive>
                <label>5 - Bienes de consumo</label>
            </value>
            <value>
                <fullName>6 - Cliente, no contribuyente</fullName>
                <isActive>false</isActive>
                <label>6 - Cliente, no contribuyente</label>
            </value>
            <value>
                <fullName>7 - Cliente agricola</fullName>
                <isActive>false</isActive>
                <label>7 - Cliente agricola</label>
            </value>
            <value>
                <fullName>8 - Empresa de distribucion</fullName>
                <isActive>false</isActive>
                <label>8 - Empresa de distribucion</label>
            </value>
            <value>
                <fullName>9 - Sucursal del fabricante</fullName>
                <isActive>false</isActive>
                <label>9 - Sucursal del fabricante</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>