Salesforce/main/default/objects/Account/fields/CNPJ_CPF__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_CPF__c</fullName>
    <externalId>true</externalId>
    <label>CNPJ/CPF</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>