Salesforce/main/default/objects/Account/fields/CNPJ_CPF_Solo_Numeros__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_CPF_Solo_Numeros__c</fullName>
    <formula>SUBSTITUTE ( SUBSTITUTE ( SUBSTITUTE ( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(  CNPJ_CPF__c , &quot; &quot;, &quot;&quot;) , &quot;-&quot;, &quot;&quot;) , &quot;.&quot;, &quot;&quot;) , &quot;/&quot;, &quot;&quot;),&quot;,&quot; , &quot;&quot;),&quot;|&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ/CPF (Solo Numeros)</label>
    <type>Text</type>
</CustomField>