Salesforce/main/default/objects/Account/fields/CoordenadorDonMario__c.field-meta.xml
<CustomField>
    <fullName>CoordenadorDonMario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordenador DonMario</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>El Coordenador DonMario debe ser un Usuario con Perfil Coordenador</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Coordenador</value>
        </filterItems>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e40000000rObQAAU</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>DonMarioAccount</relationshipName>
    <type>Lookup</type>
</CustomField>