Salesforce/main/default/objects/Account/fields/esta_en_SAP__c.field-meta.xml
<CustomField>
    <fullName>esta_en_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Está en SAP?</label>
    <type>Checkbox</type>
</CustomField>