Salesforce/main/default/objects/Account/fields/Estado_Comercializacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_Comercializacion__c</fullName>
    <label>Estado Comercialização</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>RS</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>GO</fullName>
            </value>
            <value>
                <fullName>Alto Paraná</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>DF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>