Salesforce/main/default/objects/Account/fields/Expiracao_Campanha_DMValoriza__c.field-meta.xml
<CustomField>
    <fullName>Expiracao_Campanha_DMValoriza__c</fullName>
    <label>Expiração Campanha DMValoriza</label>
    <type>Date</type>
</CustomField>