Salesforce/main/default/objects/Account/fields/Geolocalizacion__c.field-meta.xml
<CustomField>
    <fullName>Geolocalizacion__c</fullName>
    <description>Geolocalización del Agricultor</description>
    <label>Geolocalización</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>