Salesforce/main/default/objects/Account/fields/Gerente_comercial__c.field-meta.xml
<CustomField>
    <fullName>Gerente_comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente comercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Gerentes</relationshipName>
    <type>Lookup</type>
</CustomField>