Salesforce/main/default/objects/Account/fields/IE__c.field-meta.xml
<CustomField>
    <fullName>IE__c</fullName>
    <label>IE</label>
    <type>TextArea</type>
</CustomField>