Salesforce/main/default/objects/Account/fields/initProcess__c.field-meta.xml
<CustomField>
    <fullName>initProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>initProcess</label>
    <type>Checkbox</type>
</CustomField>