Salesforce/main/default/objects/Account/fields/Interno__c.field-meta.xml
<CustomField>
    <fullName>Interno__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auditor</label>
    <type>Checkbox</type>
</CustomField>