Salesforce/main/default/objects/Account/fields/Nombre_Estado__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Estado__c</fullName>
    <formula>Estado__r.Name</formula>
    <label>Nombre Estado</label>
    <type>Text</type>
</CustomField>