Salesforce/main/default/objects/Account/fields/Nombre_Region__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Region__c</fullName>
    <formula>Region__r.Name</formula>
    <label>Nombre Region</label>
    <type>Text</type>
</CustomField>