Salesforce/main/default/objects/Account/fields/Obtentor__c.field-meta.xml
<CustomField>
    <fullName>Obtentor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado sólo por el administrador. Todas las Sociedades que están en los productos deben tener la cuenta marcada con Obtentor = true</description>
    <inlineHelpText>Campo utilizado sólo por el administrador. Todas las Sociedades que están en los productos deben tener la cuenta marcada con Obtentor = true</inlineHelpText>
    <label>Obtentor</label>
    <type>Checkbox</type>
</CustomField>