Salesforce/main/default/objects/Account/fields/PoblacionSAP__c.field-meta.xml
<CustomField>
    <fullName>PoblacionSAP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>