Salesforce/main/default/objects/Account/fields/Region_SAP__c.field-meta.xml
<CustomField>
    <fullName>Region_SAP__c</fullName>
    <formula>IF(PoblacionSAP__c==null, &quot;&quot;, PoblacionSAP__r.Nombre_Estado__c)</formula>
    <label>Region SAP</label>
    <type>Text</type>
</CustomField>