Salesforce/main/default/objects/Account/fields/Renasem__c.field-meta.xml
<CustomField>
    <fullName>Renasem__c</fullName>
    <label>Renasem</label>
    <length>200</length>
    <type>Text</type>
</CustomField>