Salesforce/main/default/objects/Account/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <description>Qual dos funcionários da Brasmax que estará responsável pela conta</description>
    <inlineHelpText>Qual dos funcionários da Brasmax que estará responsável pela conta</inlineHelpText>
    <label>Responsável BRMX</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>061 - Fernando Frehner</fullName>
            </value>
            <value>
                <fullName>066 - Marcelo Steffen</fullName>
            </value>
            <value>
                <fullName>067 - Sergio Bertagnolli</fullName>
            </value>
            <value>
                <fullName>076 - Tiago Goulart</fullName>
            </value>
            <value>
                <fullName>083 - Jorge Cristiano Rosa</fullName>
            </value>
            <value>
                <fullName>010 - Brasmax</fullName>
            </value>
            <value>
                <fullName>101 - Fausto Tadeu Fanchin</fullName>
            </value>
            <value>
                <fullName>104 - Otavio Gorni</fullName>
            </value>
            <value>
                <fullName>150 - João Serrano</fullName>
            </value>
            <value>
                <fullName>012 - Anderson Weissheimer</fullName>
            </value>
            <value>
                <fullName>197 - Wagner Rank</fullName>
            </value>
            <value>
                <fullName>198 - Bernardo Zanardo</fullName>
            </value>
            <value>
                <fullName>199 - Lucas Costa</fullName>
            </value>
            <value>
                <fullName>231 - Willian Von Scharten</fullName>
            </value>
            <value>
                <fullName>234 - Julio Cesar Poletto</fullName>
            </value>
            <value>
                <fullName>017 - Luis Fernando Cecatto</fullName>
            </value>
            <value>
                <fullName>018 - Flávio Marçal dos Santos</fullName>
            </value>
            <value>
                <fullName>312 - Lucas Hilario Fantineli</fullName>
            </value>
            <value>
                <fullName>019 - Felipe Oliveira Costa</fullName>
            </value>
            <value>
                <fullName>379 - Diego F. Gonçalves</fullName>
            </value>
            <value>
                <fullName>031 - Guilherme Sousa</fullName>
            </value>
            <value>
                <fullName>023 - Gabriel V. Finatto</fullName>
            </value>
            <value>
                <fullName>464 - Ana Laura Fernandes</fullName>
            </value>
            <value>
                <fullName>467 - Natalie de Mattos</fullName>
            </value>
            <value>
                <fullName>474 - Guilherme Menezes Salau</fullName>
            </value>
            <value>
                <fullName>403 - Felipe Bianchessi</fullName>
            </value>
            <value>
                <fullName>380 - Lucas de Souza Furlan</fullName>
            </value>
            <value>
                <fullName>037 - Felipe Dias Louzada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>