Salesforce/main/default/objects/Account/fields/Responsavel_DAGMA__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_DAGMA__c</fullName>
    <label>Responsável DAGMA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>033 - Gustavo Suzano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>