Salesforce/main/default/objects/Account/fields/Responsavel_LICENCAS__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_LICENCAS__c</fullName>
    <label>Responsável LICENÇAS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>124 - Thiago Schwonka</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>