Salesforce/main/default/objects/Account/fields/Responsavel_NEOGEN__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_NEOGEN__c</fullName>
    <label>Responsável NEOGEN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>020 - Eduardo L. da Silva</fullName>
            </value>
            <value>
                <fullName>346 - Marco A. Marchioro</fullName>
            </value>
            <value>
                <fullName>022 - Josiane Dotto Dalla Corte</fullName>
            </value>
            <value>
                <fullName>485 - Felipe Biasi</fullName>
            </value>
            <value>
                <fullName>486 - Vagner Carvalho</fullName>
            </value>
            <value>
                <fullName>487 - Clevison Moraes</fullName>
            </value>
            <value>
                <fullName>319 - Felipe Oliveira Costa</fullName>
                <isActive>false</isActive>
                <label>319 - Felipe Oliveira Costa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>