Salesforce/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IMAGE( CASE( Status_Base__c , &quot;Verde&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;Amarelo&quot;, &quot;/img/samples/light_yellow.gif&quot;, &quot;Vermelho&quot;, &quot;/img/samples/light_red.gif&quot;, &quot;/s.gif&quot;), &quot;Status da conta&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status BMX</label>
    <type>Text</type>
</CustomField>