Salesforce/main/default/objects/Account/fields/Status_Base__c.field-meta.xml
<CustomField>
    <fullName>Status_Base__c</fullName>
    <label>Status Base</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verde</fullName>
                <default>true</default>
                <label>Verde</label>
            </value>
            <value>
                <fullName>Amarelo</fullName>
            </value>
            <value>
                <fullName>Vermelho</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>