Salesforce/main/default/objects/Account/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Supervisores</relationshipName>
    <type>Lookup</type>
</CustomField>