Salesforce/main/default/objects/Account/fields/Supervisor_Respons_vel_DMValoriza__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Respons_vel_DMValoriza__c</fullName>
    <description>Supervisor responsável DONMARIO Valoriza</description>
    <inlineHelpText>Supervisor responsável DONMARIO Valoriza</inlineHelpText>
    <label>Supervisor Responsável DMValoriza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adriano Mandarino</fullName>
            </value>
            <value>
                <fullName>Ana Luiza Martins</fullName>
            </value>
            <value>
                <fullName>Cristian Pirolli</fullName>
            </value>
            <value>
                <fullName>Diego Gonçalves</fullName>
                <isActive>false</isActive>
                <label>Diego Gonçalves</label>
            </value>
            <value>
                <fullName>Erinelson Digner</fullName>
            </value>
            <value>
                <fullName>Felipe Bianchessi</fullName>
            </value>
            <value>
                <fullName>Felipe Louzada</fullName>
            </value>
            <value>
                <fullName>Geovani Otowicz</fullName>
            </value>
            <value>
                <fullName>Gustavo Suzano</fullName>
            </value>
            <value>
                <fullName>João Pedro Fossa Bernardy</fullName>
            </value>
            <value>
                <fullName>João Victor Silva Trombim</fullName>
            </value>
            <value>
                <fullName>Karine Govea</fullName>
            </value>
            <value>
                <fullName>Lucas Furlan</fullName>
            </value>
            <value>
                <fullName>Lukas Reghin</fullName>
            </value>
            <value>
                <fullName>Matheus Marx</fullName>
            </value>
            <value>
                <fullName>Rafael Neubauer</fullName>
            </value>
            <value>
                <fullName>Vinícius Bellé</fullName>
                <isActive>false</isActive>
                <label>Vinícius Bellé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>