Salesforce/main/default/objects/Account/fields/Ver_Google_Map__c.field-meta.xml
<CustomField>
    <fullName>Ver_Google_Map__c</fullName>
    <formula>HYPERLINK(&apos;http://maps.google.com/?q=&apos; &amp; BillingStreet &amp; &apos;, &apos; &amp;  BillingCity &amp; &apos;, &apos; &amp;  BillingState &amp; &apos;, &apos; &amp; BillingPostalCode &amp; &apos;, &apos; &amp;  BillingCountry, &apos;Click para ver mapa&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección Google Map</label>
    <type>Text</type>
</CustomField>