Salesforce/main/default/objects/Account/recordTypes/Conta_Bloqueada.recordType-meta.xml
<RecordType>
    <fullName>Conta_Bloqueada</fullName>
    <active>true</active>
    <description>Este recordtype bloquea la edición de los Datos Fiscales</description>
    <label>Conta Bloqueada</label>
</RecordType>