Salesforce/main/default/objects/Account/recordTypes/Grupo.recordType-meta.xml
<RecordType>
    <fullName>Grupo</fullName>
    <active>true</active>
    <label>Grupo</label>
</RecordType>